<resources>
    <string name="app_name">Infosec Guard</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="splash_screen_fragment_label">Splash Screen</string>
    <string name="sign_in_fragment_label">Sign In</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_subtitle">Enter details to sign in</string>
    <string name="sign_in_email">Enter your email</string>
    <string name="sign_in_password">Enter your password</string>
    <string name="account_log_in_forgot_password_prompt">Reset password</string>
    <string name="create_account_text">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_user_name">Enter your username</string>
    <string name="register_email">Enter your email</string>
    <string name="register_phone">Enter your phone number</string>
    <string name="sign_up_password">Enter your password</string>
    <string name="sign_up_confirm_password">Confirm your password</string>
    <string name="register_user_title">Register User</string>
    <string name="register_customer_subtitle">Enter your details to register</string>
    <string name="account_btn_sign_up">Sign Up</string>
    <string name="log_in_text">Login instead</string>
    <string name="forgot_password_title">Reset Password</string>
    <string name="forgot_password_subtitle">Enter your registered email</string>
    <string name="user_name_exists">%s already exists</string>
    <string name="username_invalid">Enter valid username</string>
    <string name="email_invalid">Enter valid email address</string>
    <string name="invalid_email">Phone number must be at least 10 digits</string>
    <string name="invalid_password">Password must contain one digit, uppercase, lowercase, special character and 8 characters</string>
    <string name="invalid_confirm_password">Password does not match</string>
    <string name="check_email">Check your email</string>
    <string name="phone_verification_title">2 FA</string>
    <string name="phone_verification_subtitle">Enter code sent to your phone</string>
    <string name="enter_code">Enter verification code</string>
    <string name="two_fa_btn">Verify Code</string>
    <string name="action_logout">Logout</string>
    <string name="action_leaderboard">Leaderboard</string>
    <string name="secure_guard_quiz">Infosec Guard Quiz</string>
    <string name="choose_difficulty">Choose Difficulty</string>
    <string name="easy">Easy</string>
    <string name="high_score">H. Score: </string>
    <string name="leaderboard_rank">LB. Rank: </string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="home_random_difficulty_btn">Choose Random</string>
    <string name="last_played">Last Played: </string>
    <string name="last_score">Last Score: </string>
    <string name="rules">Rules</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="quiz_category_title">%s Quiz</string>
    <string name="game_score">%s Points</string>
    <string name="quit_quiz">Quit</string>
    <string name="pass_quiz_question">Pass</string>
    <string name="info">i</string>
    <string name="quiz_score">Score: </string>
    <string name="quiz_question_number">%s / %s</string>
    <string name="correct">Correct</string>
    <string name="seconds_count_down">%ss</string>
    <string name="question_time_up">Time Up!</string>
    <string name="quiz_over">Quiz Over</string>
    <string name="attempted_questions">Questions: </string>
    <string name="correct_questions">Correct: </string>
    <string name="text_attempted_questions">%s / %s</string>
    <string name="replay">Replay</string>
    <string name="done">Done</string>
    <string name="last_location">Last Location Played:</string>
    <string name="nil">N/A</string>
    <string name="play_easy_first">Complete Easy Mode First</string>
    <string name="play_medium_first">Complete Medium Mode First</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="rank">Rank</string>
    <string name="username">Username</string>
    <string name="score">Score</string>
    <string name="email_sent">Check email for verification link</string>
    <string name="email_verification_title">Email Verification</string>
    <string name="email_verification_subtitle">Confirm Email Verification</string>
    <string name="email_verification_btn">I Have Verified Email</string>
    <string name="email_not_verified">Please verify your email</string>
    <string name="invalid_phone_number">Phone number must be 10 characters</string>
    <string name="missing_fields">Fill out all fields.</string>

    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>