<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.quiz.Rules">

    <TextView
        android:id="@+id/txt_quiz_category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_mini"
        android:padding="@dimen/padding_mini"
        android:textAlignment="center"
        android:textSize="@dimen/text_l"
        tools:text="Easy Quiz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_quiz_category_title"
        android:layout_margin="@dimen/margin_mini"
        android:orientation="vertical"
        android:id="@+id/game_stats_layout"
        android:padding="@dimen/padding_mini">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_mini"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_played" />

            <TextView
                android:id="@+id/last_played_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="@tools:sample/date/ddmmyy" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_mini"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_score" />

            <TextView
                android:id="@+id/last_played_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="14 Points" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_mini"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/high_score" />

            <TextView
                android:id="@+id/high_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="24 Points" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_mini"
        android:padding="@dimen/padding_mini"
        android:id="@+id/card_rules"
        android:layout_below="@+id/game_stats_layout"
        app:cardElevation="@dimen/padding_mini">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_quiz_rules_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_mini"
                android:padding="@dimen/padding_mini"
                android:textAlignment="center"
                android:textSize="@dimen/text_l"
                android:text="@string/rules" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_mini"
                tools:listitem="@layout/item_rules_layout"
                tools:itemCount="5"
                android:id="@+id/rv_rules"/>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="@dimen/button_width_xxl"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_rules"
        android:layout_centerHorizontal="true"
        app:cornerRadius="@dimen/margin_mini"
        android:layout_margin="@dimen/margin_mini"
        android:padding="@dimen/padding_mini"
        android:id="@+id/start_quiz"
        android:text="@string/start_quiz"/>

</RelativeLayout>