<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.quiz.QuizFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_mini"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_l"
            android:text="@string/quiz_score"
            android:textColor="@android:color/black"
            android:padding="@dimen/padding_mini" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_l"
            tools:text="0"
            android:textColor="@android:color/black"
            android:padding="@dimen/padding_mini"
            android:id="@+id/quiz_score" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_mini"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            tools:text="00:00"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:id="@+id/txt_timer"
            android:padding="5dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:id="@+id/question_text"
            android:textAlignment="center"
            tools:text="What is a Question Pane?"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_l" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="50dp"
                android:scrollbars="vertical"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_s"
                tools:text="This is going to be the Hint Pane" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textStyle="bold"
                android:fontFamily="cursive"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_l"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/padding_midi" />
        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/quiz_question_number"
            android:textSize="@dimen/text_l"
            android:layout_margin="@dimen/margin_mini"
            android:textStyle="bold"
            android:padding="@dimen/padding_mini"
            android:id="@+id/quiz_question_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_mini"
            android:paddingTop="@dimen/padding_mini"
            android:layout_marginTop="@dimen/padding_midi"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_option1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_midi"
                android:layout_margin="@dimen/padding_mini"
                android:textAlignment="center"
                android:textSize="@dimen/text_s"
                app:cornerRadius="@dimen/margin_mini"
                tools:text="Option 1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_option2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_midi"
                android:layout_margin="@dimen/padding_mini"
                android:textAlignment="center"
                app:cornerRadius="@dimen/margin_mini"
                android:textSize="@dimen/text_s"
                tools:text="Option 2" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_mini"
            android:paddingTop="@dimen/padding_mini"
            android:orientation="horizontal"
            android:id="@+id/layout_options">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_option3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_midi"
                android:textAlignment="center"
                android:layout_margin="@dimen/padding_mini"
                app:cornerRadius="@dimen/margin_mini"
                android:textSize="@dimen/text_s"
                android:text="Option 3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_option4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_mini"
                android:padding="@dimen/padding_midi"
                android:textAlignment="center"
                android:textSize="@dimen/text_s"
                app:cornerRadius="@dimen/margin_mini"
                tools:text="Option 4" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_quit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quit_quiz"
                android:textAlignment="center"
                android:padding="@dimen/padding_mini"
                android:textSize="@dimen/text_l"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="#07B8B8B8" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pass_quiz_question"
                android:textSize="@dimen/text_l"
                android:padding="@dimen/padding_mini"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textAlignment="center"
                android:background="#07B8B8B8" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>